# food-3d-poc

./: .gitignore  README.md  docker-compose.yml  netlify.toml  render.yaml
.github/workflows/: deploy-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/routes/: jobs.py
backend/app/core/: config.py
backend/app/schemas/: job.py
backend/app/workers/: celery_app.py  tasks.py
frontend/src/app/: globals.css  page.module.css  page.tsx
