[project]
name = "food-3d-backend"
version = "0.1.0"
description = "FastAPI + photogrammetry pipeline"
authors = [
    { name = "Atlas", email = "atlas@openclaw.local" }
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "trimesh (>=4.11.2,<5.0.0)",
    "pygltflib (>=1.16.5,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
